--- a/model/0.2_config.yml
+++ b/model/0.2_config.yml
@@ -3,23 +3,7 @@ auto_save: true
 base_fun_name: silu
 ckpt_path: ./model
 device: cpu
-grid: !!python/object/apply:numpy.core.multiarray.scalar
-- !!python/object/apply:numpy.dtype
-  args:
-  - i4
-  - false
-  - true
-  state: !!python/tuple
-  - 3
-  - <
-  - null
-  - null
-  - null
-  - -1
-  - -1
-  - 0
-- !!binary |
-  AwAAAA==
+grid: 3
 grid_eps: 0.02
 grid_range:
 - -1
@@ -44,25 +28,77 @@ symbolic.funs_name.0:
   - '0'
   - '0'
   - '0'
+- - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+- - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
 symbolic.funs_name.1:
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 - - '0'
+  - '0'
+  - '0'
 symbolic_enabled: true
 width:
 - - 13
   - 0
-- - 1
+- - 3
   - 0
 - - 13
   - 0
