--- a/model/0.0_config.yml
+++ b/model/0.0_config.yml
@@ -25,6 +25,13 @@ symbolic.funs_name.0:
   - '0'
   - '0'
   - '0'
+- - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
   - '0'
   - '0'
   - '0'
@@ -38,13 +45,7 @@ symbolic.funs_name.0:
   - '0'
   - '0'
   - '0'
-  - '0'
-  - '0'
-  - '0'
 - - '0'
-  - '0'
-  - '0'
-  - '0'
   - '0'
   - '0'
   - '0'
@@ -58,47 +59,21 @@ symbolic.funs_name.1:
 - - '0'
   - '0'
   - '0'
-- - '0'
-  - '0'
   - '0'
 - - '0'
   - '0'
   - '0'
+  - '0'
+symbolic.funs_name.2:
 - - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
   - '0'
 symbolic_enabled: true
 width:
-- - 13
+- - 10
   - 0
-- - 3
+- - 4
   - 0
-- - 13
+- - 2
+  - 0
+- - 1
   - 0
