--- a/model/0.3_config.yml
+++ b/model/0.3_config.yml
@@ -3,7 +3,7 @@ auto_save: true
 base_fun_name: silu
 ckpt_path: ./model
 device: cpu
-grid: 10
+grid: 20
 grid_eps: 0.02
 grid_range:
 - -1
@@ -25,6 +25,13 @@ symbolic.funs_name.0:
   - '0'
   - '0'
   - '0'
+- - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
+  - '0'
   - '0'
   - '0'
   - '0'
@@ -38,13 +45,7 @@ symbolic.funs_name.0:
   - '0'
   - '0'
   - '0'
-  - '0'
-  - '0'
-  - '0'
 - - '0'
-  - '0'
-  - '0'
-  - '0'
   - '0'
   - '0'
   - '0'
@@ -58,47 +59,21 @@ symbolic.funs_name.1:
 - - '0'
   - '0'
   - '0'
-- - '0'
-  - '0'
   - '0'
 - - '0'
   - '0'
   - '0'
+  - '0'
+symbolic.funs_name.2:
 - - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
-  - '0'
-- - '0'
-  - '0'
   - '0'
 symbolic_enabled: false
 width:
-- - 13
+- - 10
   - 0
-- - 3
+- - 4
   - 0
-- - 13
+- - 2
+  - 0
+- - 1
   - 0
